--- a/challenge2/analysis/justglowing/EnergyViz.ipynb
+++ b/challenge2/analysis/justglowing/EnergyViz.ipynb
@@ -298,6 +298,13 @@
      "source": [
       "Here, each box describes the distribution fo the data in 30 minutes. It is easy to notice that the average consumption is higher between 10:00 and 13:00. The large amount of outliers between 15:30 and 23:00 suggests that the consumption in the afteernoon and the evening is irregular. Also, there is an increase of the consumption during the evening hours (20:00-1:00)."
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Giuseppe Vettigli, http://www.linkedin.com/in/giuseppevettigli"
+     ]
     }
    ],
    "metadata": {}
