JustGlowing submission minor revision

--- a/challenge2/analysis/justglowing/EnergyViz.ipynb
+++ b/challenge2/analysis/justglowing/EnergyViz.ipynb
@@ -303,7 +303,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Giuseppe Vettigli, http://www.linkedin.com/in/giuseppevettigli"
+      "Giuseppe Vettigli, <a href=\"http://www.linkedin.com/in/giuseppevettigli\">http://www.linkedin.com/in/giuseppevettigli</a>"
      ]
     }
    ],
