Looking at how to start some models

--- a/challenge1/analysis/maxconway/predictor.Rmd
+++ b/challenge1/analysis/maxconway/predictor.Rmd
@@ -31,3 +31,24 @@ densityplot + aes(Daylight)
 densityplot + aes(EnergyProduction)
 
 ```
+
+And a trial of some prediction, using a linear model. I'm just using Daylight since these are the only obvious direct causes.
+(Obviously testing on the training set like this is a bit taboo, but this is just exploration and overfitting isn't going to be an issue with a linear model over this kind of sample size)
+```{r}
+fit <- lm(EnergyProduction ~ Daylight + Temperature, data = training)
+mean(abs(predict(fit, training) - training$EnergyProduction) / training$EnergyProduction)
+```
+This is fairly promising. Time to move onto some more thought out predictions.
+
+Prediction
+-------------------------------------------------------
+The first thing to do before modelling a system is to make sure you understand it, in particular the causes and effects. 
+Let's first make some assumptions about the dataset:
+- The `EnergyProduction` column describes the total energy produced by an array of solar panels, over a given month.
+- `Daylight` could mean a number of different things. With a maximum of 271, it is too small to be hours of sunlight in the month. It has decimal points and +ve correlation with `EnergyProduction` so it can't be based on Oktas.
+- Temperature is the average temperature in the month. Or is it? If this is British data, in Celsius, then 0.8 seems too low, and 29 too high.
+
+# todo
+-continue discussion of the model.
+-maybe look at correlations with number of days in the month
+
