--- a/challenge1/analysis/maxconway/predictor.Rmd
+++ b/challenge1/analysis/maxconway/predictor.Rmd
@@ -42,13 +42,11 @@ densityplot + aes(EnergyProduction)
 
 ```
 
-And a trial of some prediction, using a linear model. I'm just using Daylight since these are the only obvious direct causes.
-(Obviously testing on the training set like this is a bit taboo, but this is just exploration and overfitting isn't going to be an issue with a linear model over this kind of sample size)
+Now let's look at the correlations between `Temperature`, `Daylight` and `EnergyProduction`. I'm not sure exactly what `Daylight` measures, but I'd guess that it's correlated with `Temperature`. I also expect `EnergyProduction` to have some correlation with both.
 ```{r}
-fit <- lm(EnergyProduction ~ Daylight + Temperature, data = training)
-mean(abs(predict(fit, training) - training$EnergyProduction) / training$EnergyProduction)
+cor(training[,c('Temperature', 'Daylight', 'EnergyProduction')])
 ```
-This is fairly promising. Time to move onto some more thought out predictions.
+`EnergyProduction` has the expected correlations, but the very low correlation between `Temperature` and `Daylight` is pretty surprising. One or both of these may not mean what I think it means. 
 
 Prediction
 -------------------------------------------------------
