change descriptions to markdown

--- a/challenge2/analysis/peisan/analysis.ipynb
+++ b/challenge2/analysis/peisan/analysis.ipynb
@@ -8,11 +8,11 @@
   {
    "cells": [
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notbook is for challenge2 of Cambridge Energy Data Lab GitHub tasks\n",
-      "https://github.com/camenergydatalab/EnergyDataSimulationChallenge"
+      "# This notbook is for challenge2 of Cambridge Energy Data Lab GitHub tasks\n",
+      "URL: https://github.com/camenergydatalab/EnergyDataSimulationChallenge"
      ]
     },
     {
@@ -28,13 +28,14 @@
      "prompt_number": 395
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "1. Download the data-set total-watt.csv\n",
-      "2. The data-set consists of two columns: a time stamp and the energy consumption\n",
+      "## Steps 1 & 2\n",
+      "- Download the data-set total-watt.csv\n",
+      "- The data-set consists of two columns: a time stamp and the energy consumption\n",
       "\n",
-      "Load data file as pandas DataFrame"
+      "#### Load data file as pandas DataFrame"
      ]
     },
     {
@@ -49,10 +50,10 @@
      "prompt_number": 396
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Quickly check loaded data"
+      "#### Quickly check loaded data"
      ]
     },
     {
@@ -184,23 +185,20 @@
      "prompt_number": 405
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "3. visualise the data-set\n",
-      "\n",
-      "Simply Visualize the Dataset as it is"
+      "## Steps 3\n",
+      "- visualise the data-set"
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "Use plot instead of bat because of too many data points"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "#### Simply Visualize the Dataset as it is\n",
+      "Use plot instead of bat because of too many data points"
+     ]
     },
     {
      "cell_type": "code",
@@ -234,10 +232,10 @@
      "prompt_number": 402
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Visualize changes per 30mins"
+      "#### Visualize changes per 30mins"
      ]
     },
     {
@@ -272,12 +270,18 @@
      "prompt_number": 406
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "4. visualise the data-set as values per day\n",
-      "\n",
-      "Group by date"
+      "## Steps 4\n",
+      "- visualise the data-set as values per day"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Group by date"
      ]
     },
     {
@@ -389,17 +393,18 @@
      "prompt_number": 409
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "5. cluster the values per day into 3 groups: low, medium, and high energy consumption"
+      "## Step 5\n",
+      "- cluster the values per day into 3 groups: low, medium, and high energy consumption"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Quickly check basic stats"
+      "#### Quickly check basic stats"
      ]
     },
     {
@@ -431,10 +436,10 @@
      "prompt_number": 362
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Check how total kWh/day is distributed\n",
+      "#### Check how total kWh/day is distributed\n",
       "\n",
       "It is biased to range of 10000 to 25000 kWh."
      ]
@@ -479,14 +484,15 @@
      "prompt_number": 640
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "define high, low and mean as follows. consumption is not normally distributed as above chart, so 1 std does not mean 70% in this case.\n",
+      "## define high, low and mean as follows. \n",
+      "- high > mean + std\n",
+      "- low < mean - std\n",
+      "- mean - std <= medium <= mean + std\n",
       "\n",
-      "high > mean + std\n",
-      "low < mean - std\n",
-      "mean - std <= medium <= mean + std"
+      "(*) consumption is not normally distributed as above chart, so 1 std does not mean 70% in this case."
      ]
     },
     {
@@ -701,10 +707,11 @@
      "prompt_number": 415
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "6. visualise the clusters"
+      "## Step 6\n",
+      "- visualise the clusters"
      ]
     },
     {
@@ -742,16 +749,17 @@
      "prompt_number": 416
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "(Optional) Use log values for categorization"
+      "## (Optional) Use log values for categorization"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "#### Plot daily consumption in order\n",
       "Looks like log value is more suitable for clustering"
      ]
     },
@@ -817,6 +825,17 @@
       }
      ],
      "prompt_number": 597
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Use log value this time\n",
+      "\n",
+      "- high > mean + std\n",
+      "- low < mean - std\n",
+      "- mean - std <= medium <= mean + std"
+     ]
     },
     {
      "cell_type": "code",
@@ -909,7 +928,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "(Optional 2) Use K-means for Categorization"
+      "## (Optional 2) Use K-means for Categorization\n",
+      "\n",
+      "Simply create three clusters by k-means"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### k-means clusering using 25&, 50%, 75% percentiles as initial centroids"
      ]
     },
     {
