added gitignore to ignore checkpoint file

--- a/challenge2/analysis/peisan/analysis.ipynb
+++ b/challenge2/analysis/peisan/analysis.ipynb
@@ -487,7 +487,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## define high, low and mean as follows. \n",
+      "#### define high, low and mean as follows. \n",
       "- high > mean + std\n",
       "- low < mean - std\n",
       "- mean - std <= medium <= mean + std\n",
