Some tidying up

--- a/challenge2/analysis/maxconway/visualization.ipynb
+++ b/challenge2/analysis/maxconway/visualization.ipynb
@@ -9,6 +9,21 @@
    "cells": [
     {
      "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Challenge 2 - Python"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "This isn't as well commented or presented as the R version, I mainly did it as a learning exercise for myself."
+     ]
+    },
+    {
+     "cell_type": "heading",
      "level": 4,
      "metadata": {},
      "source": [
