revise energy.json

--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:327df23cbcfd0c8f6c9d37dbdcd1582cab03fc6c3d6444f515a417792a7fc71f"
+  "signature": "sha256:dd5e5e02ffe4a77bbd106cf479871af446e05425923b15cd7b84cb18511785b2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -498,21 +498,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "myJson[2]['name']"
+      "myJson[2]['name'] = u'high'"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 134,
-       "text": [
-        "u'large'"
-       ]
-      }
-     ],
-     "prompt_number": 134
+     "outputs": [],
+     "prompt_number": 178
     },
     {
      "cell_type": "code",
@@ -527,12 +518,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\u001b[31mclusters.py\u001b[m\u001b[m                  energy_consumption_vis.html  font.otf                     \u001b[31msunburst.html\u001b[m\u001b[m                test.py\r\n",
-        "energy.json                  energy_consumption_vis.ipynb \u001b[31mindex.html\u001b[m\u001b[m                   test.ipynb\r\n"
+        "\u001b[31mclusters.py\u001b[m\u001b[m                  energy.json.buf              energy_consumption_vis.ipynb \u001b[31msunburst.html\u001b[m\u001b[m                test.py\r\n",
+        "energy.json                  energy_consumption_vis.html  font.otf                     test.ipynb\r\n"
        ]
       }
      ],
-     "prompt_number": 135
+     "prompt_number": 179
     },
     {
      "cell_type": "code",
@@ -546,61 +537,187 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 136,
+       "prompt_number": 180,
        "text": [
-        "[{u'children': [{u'children': [{u'colour': u'#aaa1cc', u'name': u'Creosol'},\n",
-        "     {u'colour': u'#e0b5c9', u'name': u'Phenolic'}],\n",
-        "    u'name': u'Pungent'},\n",
-        "   {u'children': [{u'colour': u'#e098b0', u'name': u'Caustic'},\n",
-        "     {u'colour': u'#ee82a2', u'name': u'Alkaline'}],\n",
-        "    u'name': u'Harsh'}],\n",
+        "[{u'children': [{u'name': '0'},\n",
+        "   {u'name': '1'},\n",
+        "   {u'name': '2'},\n",
+        "   {u'name': '3'},\n",
+        "   {u'name': '4'},\n",
+        "   {u'name': '5'},\n",
+        "   {u'name': '6'},\n",
+        "   {u'name': '7'},\n",
+        "   {u'name': '8'},\n",
+        "   {u'name': '9'},\n",
+        "   {u'name': '10'},\n",
+        "   {u'name': '11'},\n",
+        "   {u'name': '12'},\n",
+        "   {u'name': '13'},\n",
+        "   {u'name': '14'},\n",
+        "   {u'name': '15'},\n",
+        "   {u'name': '16'},\n",
+        "   {u'name': '17'},\n",
+        "   {u'name': '18'},\n",
+        "   {u'name': '19'},\n",
+        "   {u'name': '20'},\n",
+        "   {u'name': '21'},\n",
+        "   {u'name': '22'},\n",
+        "   {u'name': '23'}],\n",
         "  u'name': u'Sunday'},\n",
-        " {u'children': [{u'children': [{u'colour': u'#ef91ac', u'name': u'Astringent'},\n",
-        "     {u'colour': u'#eda994', u'name': u'Rough'}],\n",
-        "    u'name': u'Sharp'},\n",
-        "   {u'children': [{u'colour': u'#eeb798', u'name': u'Neutral'},\n",
-        "     {u'colour': u'#ecc099', u'name': u'Soft'}],\n",
-        "    u'name': u'Bland'}],\n",
+        " {u'children': [{u'name': '0'},\n",
+        "   {u'name': '1'},\n",
+        "   {u'name': '2'},\n",
+        "   {u'name': '3'},\n",
+        "   {u'name': '4'},\n",
+        "   {u'name': '5'},\n",
+        "   {u'name': '6'},\n",
+        "   {u'name': '7'},\n",
+        "   {u'name': '8'},\n",
+        "   {u'name': '9'},\n",
+        "   {u'name': '10'},\n",
+        "   {u'name': '11'},\n",
+        "   {u'name': '12'},\n",
+        "   {u'name': '13'},\n",
+        "   {u'name': '14'},\n",
+        "   {u'name': '15'},\n",
+        "   {u'name': '16'},\n",
+        "   {u'name': '17'},\n",
+        "   {u'name': '18'},\n",
+        "   {u'name': '19'},\n",
+        "   {u'name': '20'},\n",
+        "   {u'name': '21'},\n",
+        "   {u'name': '22'},\n",
+        "   {u'name': '23'}],\n",
         "  u'name': u'Monday'},\n",
-        " {u'children': [{u'children': [{u'colour': u'#f6d5aa', u'name': u'Delicate'},\n",
-        "     {u'colour': u'#f0d48a', u'name': u'Mild'}],\n",
-        "    u'name': u'Mellow'},\n",
-        "   {u'children': [{u'colour': u'#efd95f', u'name': u'Nippy'},\n",
-        "     {u'colour': u'#eee469', u'name': u'Piquant'}],\n",
-        "    u'name': u'Acidy'}],\n",
+        " {u'children': [{u'name': '0'},\n",
+        "   {u'name': '1'},\n",
+        "   {u'name': '2'},\n",
+        "   {u'name': '3'},\n",
+        "   {u'name': '4'},\n",
+        "   {u'name': '5'},\n",
+        "   {u'name': '6'},\n",
+        "   {u'name': '7'},\n",
+        "   {u'name': '8'},\n",
+        "   {u'name': '9'},\n",
+        "   {u'name': '10'},\n",
+        "   {u'name': '11'},\n",
+        "   {u'name': '12'},\n",
+        "   {u'name': '13'},\n",
+        "   {u'name': '14'},\n",
+        "   {u'name': '15'},\n",
+        "   {u'name': '16'},\n",
+        "   {u'name': '17'},\n",
+        "   {u'name': '18'},\n",
+        "   {u'name': '19'},\n",
+        "   {u'name': '20'},\n",
+        "   {u'name': '21'},\n",
+        "   {u'name': '22'},\n",
+        "   {u'name': '23'}],\n",
         "  u'name': u'Tuesday'},\n",
-        " {u'children': [{u'children': [{u'colour': u'#f6d5aa', u'name': u'Delicate'},\n",
-        "     {u'colour': u'#f0d48a', u'name': u'Mild'}],\n",
-        "    u'name': u'Mellow'},\n",
-        "   {u'children': [{u'colour': u'#efd95f', u'name': u'Nippy'},\n",
-        "     {u'colour': u'#eee469', u'name': u'Piquant'}],\n",
-        "    u'name': u'Acidy'}],\n",
+        " {u'children': [{u'name': '0'},\n",
+        "   {u'name': '1'},\n",
+        "   {u'name': '2'},\n",
+        "   {u'name': '3'},\n",
+        "   {u'name': '4'},\n",
+        "   {u'name': '5'},\n",
+        "   {u'name': '6'},\n",
+        "   {u'name': '7'},\n",
+        "   {u'name': '8'},\n",
+        "   {u'name': '9'},\n",
+        "   {u'name': '10'},\n",
+        "   {u'name': '11'},\n",
+        "   {u'name': '12'},\n",
+        "   {u'name': '13'},\n",
+        "   {u'name': '14'},\n",
+        "   {u'name': '15'},\n",
+        "   {u'name': '16'},\n",
+        "   {u'name': '17'},\n",
+        "   {u'name': '18'},\n",
+        "   {u'name': '19'},\n",
+        "   {u'name': '20'},\n",
+        "   {u'name': '21'},\n",
+        "   {u'name': '22'},\n",
+        "   {u'name': '23'}],\n",
         "  u'name': u'Wednesday'},\n",
-        " {u'children': [{u'children': [{u'colour': u'#f6d5aa', u'name': u'Delicate'},\n",
-        "     {u'colour': u'#f0d48a', u'name': u'Mild'}],\n",
-        "    u'name': u'Mellow'},\n",
-        "   {u'children': [{u'colour': u'#efd95f', u'name': u'Nippy'},\n",
-        "     {u'colour': u'#eee469', u'name': u'Piquant'}],\n",
-        "    u'name': u'Acidy'}],\n",
+        " {u'children': [{u'name': '0'},\n",
+        "   {u'name': '1'},\n",
+        "   {u'name': '2'},\n",
+        "   {u'name': '3'},\n",
+        "   {u'name': '4'},\n",
+        "   {u'name': '5'},\n",
+        "   {u'name': '6'},\n",
+        "   {u'name': '7'},\n",
+        "   {u'name': '8'},\n",
+        "   {u'name': '9'},\n",
+        "   {u'name': '10'},\n",
+        "   {u'name': '11'},\n",
+        "   {u'name': '12'},\n",
+        "   {u'name': '13'},\n",
+        "   {u'name': '14'},\n",
+        "   {u'name': '15'},\n",
+        "   {u'name': '16'},\n",
+        "   {u'name': '17'},\n",
+        "   {u'name': '18'},\n",
+        "   {u'name': '19'},\n",
+        "   {u'name': '20'},\n",
+        "   {u'name': '21'},\n",
+        "   {u'name': '22'},\n",
+        "   {u'name': '23'}],\n",
         "  u'name': u'Thursday'},\n",
-        " {u'children': [{u'children': [{u'colour': u'#f6d5aa', u'name': u'Delicate'},\n",
-        "     {u'colour': u'#f0d48a', u'name': u'Mild'}],\n",
-        "    u'name': u'Mellow'},\n",
-        "   {u'children': [{u'colour': u'#efd95f', u'name': u'Nippy'},\n",
-        "     {u'colour': u'#eee469', u'name': u'Piquant'}],\n",
-        "    u'name': u'Acidy'}],\n",
+        " {u'children': [{u'name': '0'},\n",
+        "   {u'name': '1'},\n",
+        "   {u'name': '2'},\n",
+        "   {u'name': '3'},\n",
+        "   {u'name': '4'},\n",
+        "   {u'name': '5'},\n",
+        "   {u'name': '6'},\n",
+        "   {u'name': '7'},\n",
+        "   {u'name': '8'},\n",
+        "   {u'name': '9'},\n",
+        "   {u'name': '10'},\n",
+        "   {u'name': '11'},\n",
+        "   {u'name': '12'},\n",
+        "   {u'name': '13'},\n",
+        "   {u'name': '14'},\n",
+        "   {u'name': '15'},\n",
+        "   {u'name': '16'},\n",
+        "   {u'name': '17'},\n",
+        "   {u'name': '18'},\n",
+        "   {u'name': '19'},\n",
+        "   {u'name': '20'},\n",
+        "   {u'name': '21'},\n",
+        "   {u'name': '22'},\n",
+        "   {u'name': '23'}],\n",
         "  u'name': u'Friday'},\n",
-        " {u'children': [{u'children': [{u'colour': u'#dbdc7f', u'name': u'Tangy'},\n",
-        "     {u'colour': u'#dfd961', u'name': u'Tart'}],\n",
-        "    u'name': u'Winey'},\n",
-        "   {u'children': [{u'colour': u'#ebe378', u'name': u'Hard'},\n",
-        "     {u'colour': u'#f5e351', u'name': u'Acrid'}],\n",
-        "    u'name': u'Soury'}],\n",
+        " {u'children': [{u'name': '0'},\n",
+        "   {u'name': '1'},\n",
+        "   {u'name': '2'},\n",
+        "   {u'name': '3'},\n",
+        "   {u'name': '4'},\n",
+        "   {u'name': '5'},\n",
+        "   {u'name': '6'},\n",
+        "   {u'name': '7'},\n",
+        "   {u'name': '8'},\n",
+        "   {u'name': '9'},\n",
+        "   {u'name': '10'},\n",
+        "   {u'name': '11'},\n",
+        "   {u'name': '12'},\n",
+        "   {u'name': '13'},\n",
+        "   {u'name': '14'},\n",
+        "   {u'name': '15'},\n",
+        "   {u'name': '16'},\n",
+        "   {u'name': '17'},\n",
+        "   {u'name': '18'},\n",
+        "   {u'name': '19'},\n",
+        "   {u'name': '20'},\n",
+        "   {u'name': '21'},\n",
+        "   {u'name': '22'},\n",
+        "   {u'name': '23'}],\n",
         "  u'name': u'Saturday'}]"
        ]
       }
      ],
-     "prompt_number": 136
+     "prompt_number": 180
     },
     {
      "cell_type": "code",
@@ -614,13 +731,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 137,
+       "prompt_number": 181,
        "text": [
         "u'Sunday'"
        ]
       }
      ],
-     "prompt_number": 137
+     "prompt_number": 181
     },
     {
      "cell_type": "code",
@@ -634,13 +751,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 138,
+       "prompt_number": 182,
        "text": [
         "u'Monday'"
        ]
       }
      ],
-     "prompt_number": 138
+     "prompt_number": 182
     },
     {
      "cell_type": "code",
@@ -666,7 +783,7 @@
        ]
       }
      ],
-     "prompt_number": 141
+     "prompt_number": 183
     },
     {
      "cell_type": "code",
@@ -680,7 +797,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 163
+     "prompt_number": 184
     },
     {
      "cell_type": "code",
@@ -694,7 +811,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 164
+     "prompt_number": 185
     },
     {
      "cell_type": "code",
@@ -708,7 +825,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 165,
+       "prompt_number": 186,
        "text": [
         "[{u'children': [{u'children': [0,\n",
         "     1,\n",
@@ -1237,11 +1354,11 @@
         "     22,\n",
         "     23],\n",
         "    u'name': u'Saturday'}],\n",
-        "  u'name': u'large'}]"
+        "  u'name': u'high'}]"
        ]
       }
      ],
-     "prompt_number": 165
+     "prompt_number": 186
     },
     {
      "cell_type": "code",
