revise html file

--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dd5e5e02ffe4a77bbd106cf479871af446e05425923b15cd7b84cb18511785b2"
+  "signature": "sha256:5072e42b6a7f7cc534c1e0bab2c5a97c2d3a98c10f439f22c6f6873b1b0c41b9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1373,7 +1373,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 172
+     "prompt_number": 187
     },
     {
      "cell_type": "code",
@@ -1387,7 +1387,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 173,
+       "prompt_number": 188,
        "text": [
         "[{u'children': [{u'children': [{u'name': '0'},\n",
         "     {u'name': '1'},\n",
@@ -1916,11 +1916,11 @@
         "     {u'name': '22'},\n",
         "     {u'name': '23'}],\n",
         "    u'name': u'Saturday'}],\n",
-        "  u'name': u'large'}]"
+        "  u'name': u'high'}]"
        ]
       }
      ],
-     "prompt_number": 173
+     "prompt_number": 188
     },
     {
      "cell_type": "code",
@@ -1934,13 +1934,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 129,
+       "prompt_number": 189,
        "text": [
-        "u'Flowery'"
+        "'0'"
        ]
       }
      ],
-     "prompt_number": 129
+     "prompt_number": 189
     },
     {
      "cell_type": "code",
@@ -1952,7 +1952,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 174
+     "prompt_number": 190
     },
     {
      "cell_type": "code",
